dynamic loading issues-compare and fixed img center align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ main {
   padding: 2vh 2vw 2vh 2vw;
   display:flex;
   flex-direction: column;
+  align-self: center;
 }
 /*--------------------------------------------------------------
 # Back to top button
